--- a/pages/js.html
+++ b/pages/js.html
@@ -127,7 +127,7 @@
 
           <ul>
             <p><strong>День 3-4:</strong></p>
-            <li>Работа с событиями (click, input, submit)</li>
+            <li><a href="../pages/js/ch4-4.html">Работа с событиями (click, input, submit)</a></li>
             <li>Использование addEventListener для управления событиями</li>
           </ul>
 
