--- a/pages/js.html
+++ b/pages/js.html
@@ -128,7 +128,7 @@
           <ul>
             <p><strong>День 3-4:</strong></p>
             <li><a href="../pages/js/ch4-4.html">Работа с событиями (click, input, submit)</a></li>
-            <li>Использование addEventListener для управления событиями</li>
+            <li><a href="../pages/js/ch4-5.html">Использование addEventListener для управления событиями</a></li>
           </ul>
 
           <ul>
