--- a/pages/js.html
+++ b/pages/js.html
@@ -133,7 +133,7 @@
 
           <ul>
             <p><strong>День 5-6:</strong></p>
-            <li>Создание и удаление элементов DOM</li>
+            <li><a href="../pages/js/ch4-6.html">Создание и удаление элементов DOM</a></li>
             <li>Работа с формами и валидация данных</li>
           </ul>
 
