--- a/pages/js.html
+++ b/pages/js.html
@@ -134,7 +134,7 @@
           <ul>
             <p><strong>День 5-6:</strong></p>
             <li><a href="../pages/js/ch4-6.html">Создание и удаление элементов DOM</a></li>
-            <li>Работа с формами и валидация данных</li>
+            <li><a href="../pages/js/ch4-7.html">Работа с формами и валидация данных</a></li>
           </ul>
 
           <ul>
