--- a/pages/js/ch4-2.html
+++ b/pages/js/ch4-2.html
@@ -38,7 +38,7 @@
           <p>Метод <code>getElementById</code> — это самый простой и быстрый способ найти элемент на странице по его уникальному идентификатору (id). Этот метод возвращает один элемент, так как id должен быть уникальным на странице.</p>
           <p>Пример:</p>
 <pre>
-  <code class="lang-css">
+  <code class="lang-html">
     &frasl;&frasl;HTML
     &lt;div id="main-header">Заголовок&lt;/div&gt;
   </code>
@@ -55,7 +55,7 @@
           <p>Метод <code>querySelector</code> — это более универсальный способ поиска элементов. Он принимает в качестве аргумента любой CSS-селектор и возвращает первый элемент, который соответствует этому селектору. Если ни один элемент не соответствует селектору, возвращается <code>null</code>.</p>
           <p>Пример:</p>
 <pre>
-  <code class="lang-css">
+  <code class="lang-html">
     &frasl;&frasl;HTML
     &lt;div class="container">
       &lt;p class="text">Первый параграф&lt;/p>
