--- a/pages/js.html
+++ b/pages/js.html
@@ -146,7 +146,7 @@
 
           <ul>
             <p><strong>День 1-2:</strong></p>
-            <li>Введение в асинхронное программирование</li>
+            <li><a href="../pages/js/ch5-1.html">Введение в асинхронное программирование</a></li>
             <li>Использование setTimeout и setInterval</li>
             <li>Введение в промисы (Promises)</li>
           </ul>
