--- a/pages/js.html
+++ b/pages/js.html
@@ -147,7 +147,7 @@
           <ul>
             <p><strong>День 1-2:</strong></p>
             <li><a href="../pages/js/ch5-1.html">Введение в асинхронное программирование</a></li>
-            <li>Использование setTimeout и setInterval</li>
+            <li><a href="../pages/js/ch5-2.html">Использование setTimeout и setInterval</a></li>
             <li>Введение в промисы (Promises)</li>
           </ul>
 
