--- a/pages/js/ch1-11.html
+++ b/pages/js/ch1-11.html
@@ -100,7 +100,7 @@
     console.log(average);
   </code>
 </pre>
-          <p>Пример 6: Функция расчета процента от числа</p>
+          <p><strong>Пример 6: Функция расчета процента от числа</strong></p>
           <p>Функция принимает два числа: общее значение и процент, который нужно вычислить, и возвращает результат.</p>
 <pre>
   <code class="lang-js">
