--- a/pages/js.html
+++ b/pages/js.html
@@ -148,7 +148,7 @@
             <p><strong>День 1-2:</strong></p>
             <li><a href="../pages/js/ch5-1.html">Введение в асинхронное программирование</a></li>
             <li><a href="../pages/js/ch5-2.html">Использование setTimeout и setInterval</a></li>
-            <li>Введение в промисы (Promises)</li>
+            <li><a href="../pages/js/ch5-3.html">Введение в промисы (Promises)</a></li>
           </ul>
 
           <ul>
