--- a/pages/js.html
+++ b/pages/js.html
@@ -153,7 +153,7 @@
 
           <ul>
             <p><strong>День 3-4:</strong></p>
-            <li>Работа с async/await</li>
+            <li><a href="../pages/js/ch5-4.html">Работа с async/await</a></li>
             <li>Обработка ошибок в асинхронном коде</li>
           </ul>
 
