--- a/pages/js.html
+++ b/pages/js.html
@@ -154,7 +154,7 @@
           <ul>
             <p><strong>День 3-4:</strong></p>
             <li><a href="../pages/js/ch5-4.html">Работа с async/await</a></li>
-            <li>Обработка ошибок в асинхронном коде</li>
+            <li><a href="../pages/js/ch5-5.html">Обработка ошибок в асинхронном коде</a></li>
           </ul>
 
           <ul>
