--- a/pages/css/css-sandbox.html
+++ b/pages/css/css-sandbox.html
@@ -32,7 +32,9 @@
         <h1>Работа с async/await в JavaScript</h1><hr>
         <p><code>async/await</code> — это более современный синтаксис для работы с асинхронными операциями в JavaScript, который представляет собой "синтаксический сахар" над промисами. Основное преимущество async/await заключается в том, что они позволяют писать асинхронный код в более понятной и последовательной манере, похожей на синхронный код.</p>
         <ol>
-          <li>Основные концепции <code>async/await</code></li>
+          <strong>
+            <li>Основные концепции <code>async/await</code></li>
+          </strong>
           <ul>
             <li><code>async</code>: перед функцией указывает, что эта функция будет асинхронной и будет возвращать промис.</li>
             <li><code>await</code>: приостанавливает выполнение функции до тех пор, пока промис не завершится. <code>await</code> может использоваться только внутри функций, объявленных с ключевым словом <code>async</code>.</li>
