--- a/pages/js.html
+++ b/pages/js.html
@@ -159,7 +159,7 @@
 
           <ul>
             <p><strong>День 5-6:</strong></p>
-            <li>Введение в работу с API</li>
+            <li><a href="../pages/js/ch5-6.html">Введение в работу с API</a></li>
             <li>Отправка запросов и получение данных (fetch, axios)</li>
           </ul>
 
