--- a/pages/css/css-sandbox.html
+++ b/pages/css/css-sandbox.html
@@ -27,7 +27,7 @@
     </header>
 
     <!--основной блок с информацией-->
-    <main>
+    <main class="flex-container">
       <!-- <article> -->
         <h1>Работа с async/await в JavaScript</h1><hr>
         <p><code>async/await</code> — это более современный синтаксис для работы с асинхронными операциями в JavaScript, который представляет собой "синтаксический сахар" над промисами. Основное преимущество async/await заключается в том, что они позволяют писать асинхронный код в более понятной и последовательной манере, похожей на синхронный код.</p>
