--- a/pages/js/ch1-1.html
+++ b/pages/js/ch1-1.html
@@ -13,18 +13,7 @@
 
   <body>
     <!--шапка с кнопками переходами-->
-    <header class="main-header-top">
-      <div class="header-logo">
-        <img src="../../images/image2.png">
-      </div>
-      
-      <ul>
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="../../pages/html.html">HTML</a></li>
-        <li><a href="../../pages/css.html">CSS</a></li>
-        <li><a href="../../pages/js.html">JS</a></li>
-      </ul>
-    </header>
+    <div id="menu"></div>
 
     <!--основной блок с информацией-->
     <main>
@@ -93,10 +82,10 @@
     </main>
 
     <!--блок в нижней части страницы-->
-    <footer> 
-      <p>©Copyright 2024 by nobody. All rights reversed.</p>
-    </footer>
+    <div id="footer"></div>
 
+    <script src="scripts/loadMenu.js"></script>
+    <script src="scripts/loadFooter.js"></script>
   </body>
 
 </html>
