--- a/pages/js/js-sandbox.html
+++ b/pages/js/js-sandbox.html
@@ -31,7 +31,7 @@
     <!--блок в нижней части страницы-->
     <div id="footer"></div>
 
-    <script src="/scripts/loadMenu.js"></script>
-    <script src="/scripts/loadFooter.js"></script>
+    <script src="scripts/loadMenu.js"></script>
+    <script src="scripts/loadFooter.js"></script>
   </body>
 </html>
