--- a/pages/js/ch1-1.html
+++ b/pages/js/ch1-1.html
@@ -84,16 +84,8 @@
     <!--блок в нижней части страницы-->
     <div id="footer"></div>
 
-    <script type="module">
-      import { loadMenu } from '../../scripts/loadMenu.js';
-      import { loadFooter } from '../../scripts/loadFooter.js';
-      
-      // Загружаем меню
-      loadMenu();
-      loadFooter();
-    </script>
-
-    
+    <script src="../../scripts/loadMenu.js"></script>
+    <script src="../../scripts/loadFooter.js"></script>
   </body>
 
 </html>
