--- a/pages/css.html
+++ b/pages/css.html
@@ -134,6 +134,7 @@
         </ul>
         <hr>
         <a href="../pages/css/css-sandbox.html">css sandbox</a>
+        <a href="../pages/css/css-sandbox2.html">css sandbox2</a>
 
       </article>
     </main>
