--- a/pages/css.html
+++ b/pages/css.html
@@ -135,6 +135,7 @@
         <hr>
         <a href="../pages/css/css-sandbox.html">css sandbox</a>
         <a href="../pages/css/css-sandbox2.html">css sandbox2</a>
+        <a href="../pages/css/css-sandbox3.html">css sandbox-flexbox</a>
 
       </article>
     </main>
