--- a/pages/css/css-sandbox2.html
+++ b/pages/css/css-sandbox2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="../../images/image.jpg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS</title>
+    <title>CSS</title>
     <link rel="stylesheet" href="../../styles/style2(sandbox2).css">
     <link rel="stylesheet" href="../../styles/prism.css">
     <script src="../../scripts/prism.js" defer></script>
