--- a/pages/css/css-sandbox3.html
+++ b/pages/css/css-sandbox3.html
@@ -12,30 +12,26 @@
   </head>
 
   <body>
+    <div class="game-wrapper">
 
-    <header>
-      <h1>header</h1>
-    </header>
+      <div class="left-menu">
 
-    <div class="container">
-      <div class="box box-nav-left">
-        <h2>Box nav left</h2>
-        <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
+        <div class="logo">
+          <p>PRYDWEN</p>
+        </div>
+        
+        <div class="left-menu-content-wrapper">
+
+          <div class="left-menu-content">
+
+          </div>
+        </div>
       </div>
 
-      <div class="box box-content">
-        <h2>Content</h2>
-        <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
+      <div class="right-main">
+
       </div>
 
-      <div class="box box-nav-right">
-        <h2>Box nav right</h2>
-        <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
-      </div>
     </div>
-
-    <footer>
-      <h1>footer</h1>
-    </footer>
   </body>
 </html>
