--- a/pages/css/css-sandbox3.html
+++ b/pages/css/css-sandbox3.html
@@ -17,7 +17,7 @@
       <div class="left-menu">
 
         <div class="logo">
-          <p>PRYDWEN</p>
+          <p>Lorem</p>
         </div>
         
         <div class="left-menu-content-wrapper">
