--- a/pages/js.html
+++ b/pages/js.html
@@ -160,7 +160,7 @@
           <ul>
             <p><strong>День 5-6:</strong></p>
             <li><a href="../pages/js/ch5-6.html">Введение в работу с API</a></li>
-            <li>Отправка запросов и получение данных (fetch, axios)</li>
+            <li><a href="../pages/js/ch5-7.html">Отправка запросов и получение данных (fetch, axios)</a></li>
           </ul>
 
           <ul>
