--- a/pages/css.html
+++ b/pages/css.html
@@ -37,7 +37,7 @@
         <h1>Начало работы с CSS</h1>
         <ul>
           <p><strong>1. Введение в CSS</strong></p>
-          <li>Что такое CSS и зачем он нужен.</li>
+          <li><a href="../pages/css/ch1-1.html">Что такое CSS и зачем он нужен.</a></li>
           <li>Основные способы подключения CSS: <code style="background-color: rgba(169, 169, 169, 0.315);">inline</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">internal</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">external</code>.</li>
           <li>Основные синтаксические правила CSS.</li>
           <li>Основные понятия: селекторы, свойства, значения.</li>
