--- a/pages/css.html
+++ b/pages/css.html
@@ -39,7 +39,7 @@
           <p><strong>1. Введение в CSS</strong></p>
           <li><a href="../pages/css/ch1-1.html">Что такое CSS и зачем он нужен.</a></li>
           <li>Основные способы подключения CSS: <code style="background-color: rgba(169, 169, 169, 0.315);">inline</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">internal</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">external</code>.</li>
-          <li>Основные синтаксические правила CSS.</li>
+          <li><a href="../pages/css/ch1-3.html">Основные синтаксические правила CSS.</a></li>
           <li>Основные понятия: селекторы, свойства, значения.</li>
         </ul>
 
