--- a/pages/js.html
+++ b/pages/js.html
@@ -202,6 +202,7 @@
           </ul>
         
           <ul>
+            <li><a href="../pages/js/ready-ex.html">Готовые примеры</a></li>
             <li><a href="../pages/js/js-sandbox.html">Песочница</a></li>
             <li><a href="../pages/js/js-massiv.html">Массивы</a></li>
             <li><a href="../pages/js/js-objects.html">Объекты</a></li>
