--- a/pages/css.html
+++ b/pages/css.html
@@ -47,7 +47,7 @@
           <p><strong>2. Базовые стили</strong></p>
           <li><a href="../pages/css/ch2-1.html">Работа с текстом: <code style="background-color: rgba(169, 169, 169, 0.315);">font-size</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">font-family</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">font-weight</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">text-align</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">text-transform</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">line-height</code>.</a></li>
           <li><a href="../pages/css/ch2-2.html">Цвета и фон: <code style="background-color: rgba(169, 169, 169, 0.315);">color</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">background-color</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">background-image</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">opacity</code>.</a></li>
-          <li>Отступы и поля (<code style="background-color: rgba(169, 169, 169, 0.315);">margins</code> и <code style="background-color: rgba(169, 169, 169, 0.315);">padding</code>).</li>
+          <li><a href="../pages/css/ch2-3.html">Отступы и поля (<code style="background-color: rgba(169, 169, 169, 0.315);">margins</code> и <code style="background-color: rgba(169, 169, 169, 0.315);">padding</a></code>).</li>
           <li>Бордеры и их свойства: <code style="background-color: rgba(169, 169, 169, 0.315);">border</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">border-radius</code>.</li>
         </ul>
 
