--- a/pages/css.html
+++ b/pages/css.html
@@ -28,6 +28,7 @@
         <li><a href="../pages/html.html">HTML</a></li>
         <li><a href="../pages/css.html">CSS</a></li>
         <li><a href="../pages/js.html">JS</a></li>
+        <li><a href="../pages/PostgreSQL.html">PostgreSQL</a></li>
       </ul>
     </header>
 
