--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -38,7 +38,7 @@
         <ol>
           <li><strong>Что такое базы данных?</strong>
             <ul>
-              <li>Понятие реляционных баз данных.</li>
+              <li><a href="../pages/PostgreSQL/ch1-1-1.html">Понятие реляционных баз данных.</a></li>
               <li>Основные компоненты баз данных (таблицы, строки, столбцы).</li>
               <li>Введение в SQL (язык структурированных запросов).</li>
             </ul>
