--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <li><a href="pages/html.html">HTML</a></li>
         <li><a href="pages/css.html">CSS</a></li>
         <li><a href="pages/js.html">JS</a></li>
-        <li><a href="pages/PostgreSQL.html">PostgreSQL</a></li>
       </ul>
     </header>
 
@@ -34,7 +33,10 @@
       <article>
         <h1>Начало работы с HTML, CSS, JS</h1>
 
-        <p>Сайт-шпаргалка, сделанный для обощения всего нужного материала для создания сайта.<hr> <br> </p>
+        <p>Сайт-шпаргалка, сделанный для обощения всего нужного материала для создания сайта.</p>
+        <p>Дополнительная информация:</p>
+        <a href="pages/PostgreSQL.html">PostgreSQL</a>
+        <hr>
         
         <article>
         <iframe class="youtube-iframe" width="400" height="200" src="https://www.youtube.com/embed/iBcjzaOvE94?si=PywjjwlCw5W7EzWl" 
