--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -26,7 +26,6 @@
         <li><a href="../pages/html.html">HTML</a></li>
         <li><a href="../pages/css.html">CSS</a></li>
         <li><a href="../pages/js.html">JS</a></li>
-        <li><a href="../pages/PostgreSQL.html">PostgreSQL</a></li>
       </ul>
     </header>
 
@@ -39,15 +38,15 @@
           <li><strong>Что такое базы данных?</strong>
             <ul>
               <li><a href="../pages/PostgreSQL/ch1-1-1.html">Понятие реляционных баз данных.</a></li>
-              <li>Основные компоненты баз данных (таблицы, строки, столбцы).</li>
-              <li>Введение в SQL (язык структурированных запросов).</li>
+              <li><a href="../pages/PostgreSQL/ch1-1-2.html">Основные компоненты баз данных (таблицы, строки, столбцы).</a></li>
+              <li><a href="../pages/PostgreSQL/ch1-1-3.html">Введение в SQL (язык структурированных запросов).</a></li>
             </ul>
           </li>
           <li><strong>Установка PostgreSQL</strong>
             <ul>
               <li>Установка PostgreSQL на Windows, macOS или Linux.</li>
               <li>Установка графического интерфейса pgAdmin (для удобной работы с базой).</li>
-              <li>Настройка окружения.</li>
+              <li><a href="../pages/PostgreSQL/ch1-2-3.html">Настройка окружения.</a></li>
             </ul>
           </li>
           <li><strong>Основные команды PostgreSQL</strong>
