--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -51,8 +51,8 @@
           </li>
           <li><strong>Основные команды PostgreSQL</strong>
             <ul>
-              <li>Подключение к базе данных через терминал или pgAdmin.</li>
-              <li>Базовые команды PostgreSQL (psql, подключение к базам).</li>
+              <li><a href="../pages/PostgreSQL/ch1-3-1.html">Подключение к базе данных через терминал или pgAdmin.</a></li>
+              <li><a href="../pages/PostgreSQL/ch1-3-2.html">Базовые команды PostgreSQL (psql, подключение к базам).</a></li>
             </ul>
           </li>
         </ol>
