--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -61,7 +61,7 @@
         <ol>
           <li><strong>Создание баз данных и таблиц</strong>
             <ul>
-              <li>Команда <code>CREATE DATABASE</code>.</li>
+              <li><a href="../pages/PostgreSQL/ch2-1-1.html">Команда <code>CREATE DATABASE</a></code>.</li>
               <li>Команда <code>CREATE TABLE</code>.</li>
               <li>Типы данных в PostgreSQL (INTEGER, VARCHAR, DATE, BOOLEAN и т.д.).</li>
             </ul>
