--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -62,8 +62,8 @@
           <li><strong>Создание баз данных и таблиц</strong>
             <ul>
               <li><a href="../pages/PostgreSQL/ch2-1-1.html">Команда <code>CREATE DATABASE</a></code>.</li>
-              <li>Команда <code>CREATE TABLE</code>.</li>
-              <li>Типы данных в PostgreSQL (INTEGER, VARCHAR, DATE, BOOLEAN и т.д.).</li>
+              <li><a href="../pages/PostgreSQL/ch2-1-2.html">Команда <code>CREATE TABLE</a></code>.</li>
+              <li><a href="../pages/PostgreSQL/ch2-1-3.html">Типы данных в PostgreSQL (INTEGER, VARCHAR, DATE, BOOLEAN и т.д.).</a></li>
             </ul>
           </li>
           <li><strong>Операции CRUD</strong>
