--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -68,7 +68,7 @@
           </li>
           <li><strong>Операции CRUD</strong>
             <ul>
-              <li>Create: Вставка данных с помощью команды <code>INSERT</code>.</li>
+              <li><a href="../pages/PostgreSQL/ch2-2-1.html">Create: Вставка данных с помощью команды<code>INSERT</code>.<a></li>
               <li>Read: Чтение данных с помощью команды <code>SELECT</code> (простые запросы).</li>
               <li>Update: Обновление данных с помощью команды <code>UPDATE</code>.</li>
               <li>Delete: Удаление данных с помощью команды <code>DELETE</code>.</li>
