--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -76,10 +76,10 @@
           </li>
           <li><strong>Операции с фильтрацией и сортировкой</strong>
             <ul>
-              <li>Использование условий с <code>WHERE</code>.</li>
-              <li>Фильтрация с <code>LIKE</code>, <code>IN</code>, <code>BETWEEN</code>.</li>
-              <li>Сортировка данных с помощью <code>ORDER BY</code>.</li>
-              <li>Лимитирование результатов с помощью <code>LIMIT</code>.</li>
+              <li><a href="../pages/PostgreSQL/ch2-3-1.html">Использование условий с <code>WHERE</a></code>.</li>
+              <li><a href="../pages/PostgreSQL/ch2-3-2.html">Фильтрация с <code>LIKE</code>, <code>IN</code>, <code>BETWEEN</a></code>.</li>
+              <li><a href="../pages/PostgreSQL/ch2-3-3.html">Сортировка данных с помощью <code>ORDER BY</a></code>.</li>
+              <li><a href="../pages/PostgreSQL/ch2-3-4.html">Лимитирование результатов с помощью <code>LIMIT</a></code>.</li>
             </ul>
           </li>
         </ol>
