--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -88,7 +88,7 @@
         <ol>
           <li><strong>Агрегация данных</strong>
             <ul>
-              <li>Функции агрегации (<code>COUNT</code>, <code>SUM</code>, <code>AVG</code>, <code>MAX</code>, <code>MIN</code>).</li>
+              <li><a href="../pages/PostgreSQL/ch3-1-1.html">Функции агрегации (<code>COUNT</code>, <code>SUM</code>, <code>AVG</code>, <code>MAX</code>, <code>MIN</code>).</a></li>
               <li>Группировка данных с помощью <code>GROUP BY</code>.</li>
               <li>Фильтрация агрегированных данных с <code>HAVING</code>.</li>
             </ul>
