--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -111,7 +111,7 @@
         <ol>
           <li><strong>Индексы</strong>
             <ul>
-              <li>Зачем нужны индексы и как они работают.</li>
+              <li><a href="../pages/PostgreSQL/ch4-1-1.html">Зачем нужны индексы и как они работают.</a></li>
               <li>Создание индексов с помощью команды <code>CREATE INDEX</code>.</li>
               <li>Разновидности индексов (B-tree, Hash).</li>
             </ul>
@@ -171,14 +171,14 @@
         <ol>
           <li><strong>Расширенные возможности PostgreSQL</strong>
             <ul>
-              <li>Работа с JSON-данными.</li>
+              <li><a href="../pages/PostgreSQL/ch7-1-1.html">Работа с JSON-данными.</a></li>
               <li>Хранение и манипуляция массивами.</li>
               <li>Встроенные функции и создание пользовательских функций.</li>
             </ul>
           </li>
           <li><strong>Миграция данных</strong>
             <ul>
-              <li>Импорт и экспорт данных (CSV, JSON).</li>
+              <li><a href="../pages/PostgreSQL/ch7-2-1.html">Импорт и экспорт данных (CSV, JSON).</a></li>
               <li>Использование <code>COPY</code> для массовой вставки данных.</li>
             </ul>
           </li>
