--- a/pages/css.html
+++ b/pages/css.html
@@ -53,7 +53,7 @@
 
         <ul>
           <p><strong>3. Селекторы в CSS</strong></p>
-          <li>Простые селекторы: по тегам, классам, идентификаторам.</li>
+          <li><a href="../pages/css/ch3-1.html">Простые селекторы: по тегам, классам, идентификаторам.</a></li>
           <li>Комбинированные селекторы: потомки, дети, соседние элементы.</li>
           <li>Псевдоклассы: <code style="background-color: rgba(169, 169, 169, 0.315);">:hover</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:focus</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:active</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:nth-child()</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">:last-child()</code>.</li>
           <li>Псевдоэлементы: <code style="background-color: rgba(169, 169, 169, 0.315);">::before</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">::after</code>.</li>
