--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -148,9 +148,9 @@
         <ol>
           <li><strong>Пользователи и права доступа</strong>
             <ul>
-              <li>Создание пользователей и ролей.</li>
-              <li>Назначение прав доступа (GRANT, REVOKE).</li>
-              <li>Управление правами на уровне таблиц и баз данных.</li>
+              <li><a href="../pages/PostgreSQL/ch6-1-1.html">Создание пользователей и ролей.</a></li>
+              <li><a href="../pages/PostgreSQL/ch6-1-2.html">Назначение прав доступа (GRANT, REVOKE).</a></li>
+              <li><a href="../pages/PostgreSQL/ch6-1-3.html">Управление правами на уровне таблиц и баз данных.</a></li>
             </ul>
           </li>
           <li><strong>Резервное копирование и восстановление</strong>
