--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -155,7 +155,7 @@
           </li>
           <li><strong>Резервное копирование и восстановление</strong>
             <ul>
-              <li>Использование <code>pg_dump</code> для резервного копирования.</li>
+              <li><a href="../pages/PostgreSQL/ch6-2-1.html">Использование <code>pg_dump</code> для резервного копирования.</a></li>
               <li>Восстановление данных с помощью <code>pg_restore</code>.</li>
             </ul>
           </li>
