--- a/pages/html.html
+++ b/pages/html.html
@@ -33,7 +33,185 @@
     <!--основной блок с информацией-->
     <main>
       <article>
-        <h1>Статьи HTML</h1>
+        <h1>Этап 1: Введение в HTML</h1>
+        <ol>
+          <li><strong>Что такое HTML и как он работает?</strong>
+            <ul>
+              <li>Основные концепции веб-страниц: структура, браузеры и HTML.</li>
+              <li>Роль HTML в связке с CSS и JavaScript.</li>
+            </ul>
+          </li>
+          <li><strong>Первая HTML-страница</strong>
+            <ul>
+              <li>Теги <code>&lt;html></code>, <code>&lt;head></code>, <code>&lt;body></code>, структура HTML-документа.</li>
+              <li>Тег <code>&lt;title></code>, заголовки <code>&lt;h1> – &lt;h6></code>.</li>
+              <li>Практика: создание первой страницы с заголовком и текстом.</li>
+            </ul>
+          </li>
+        </ol>
+
+        <h1>Этап 2: Текст и форматирование</h1>
+        <ol>
+          <li><strong>Параграфы и отступы</strong>
+            <ul>
+              <li>Теги <code>&lt;p></code>, <code>&lt;br></code>, <code>&lt;hr></code>.</li>
+              <li>Практика: создание текста с параграфами и разделительными линиями.</li>
+            </ul>
+          </li>
+          <li><strong>Форматирование текста</strong>
+            <ul>
+              <li>Жирный текст <code>&lt;b></code>, курсив <code>&lt;i></code>, подчёркнутый <code>&lt;u></code>, зачёркнутый <code>&lt;s></code>.</li>
+              <li>Сильное выделение <code>&lt;strong></code> и акцентирование <code>&lt;em></code>.</li>
+              <li>Практика: форматирование абзацев с разными стилями текста.</li>
+            </ul>
+          </li>
+          <li><strong>Списки</strong>
+            <ul>
+              <li>Нумерованные списки <code>&lt;ol></code> и ненумерованные <code>&lt;ul></code>, элементы списка <code>&lt;li></code>.</li>
+              <li>Практика: создание списков с различными типами пунктов.</li>
+            </ul>
+          </li>
+        </ol>
+
+        <h1>Этап 3: Ссылки и изображения</h1>
+        <ol>
+          <li><strong>Гиперссылки</strong>
+            <ul>
+              <li>Тег <code>&lt;a></code>, атрибуты <code>href</code>, <code>target</code>.</li>
+              <li>Ссылки на внутренние страницы и внешние ресурсы.</li>
+              <li>Практика: создание набора гиперссылок.</li>
+            </ul>
+          </li>
+          <li><strong>Изображения</strong>
+            <ul>
+              <li>Тег <code>&lt;img></code>, атрибуты <code>src</code>, <code>alt</code>, <code>width</code>, <code>height</code>.</li>
+              <li>Практика: вставка и настройка изображений на странице.</li>
+            </ul>
+          </li>
+        </ol>
+
+        <h1>Этап 4: Структурирование содержимого</h1>
+        <ol>
+          <li><strong>Семантические теги</strong>
+            <ul>
+              <li>Основные структурные элементы: <code>&lt;header></code>, <code>&lt;footer></code>, <code>&lt;nav></code>, <code>&lt;main></code>, <code>&lt;article></code>, <code>&lt;section></code>, <code>&lt;aside></code>.</li>
+              <li>Важность семантики для SEO и доступности.</li>
+              <li>Практика: структурирование страницы с использованием семантических тегов.</li>
+            </ul>
+          </li>
+          <li><strong>Таблицы</strong>
+            <ul>
+              <li>Теги <code>&lt;table></code>, <code>&lt;tr></code>, <code>&lt;td></code>, <code>&lt;th></code>, атрибуты colspan, rowspan.</li>
+              <li>Практика: создание таблиц с различными форматами.</li>
+            </ul>
+          </li>
+        </ol>
+
+        <h1>Этап 5: Формы и взаимодействие с пользователем</h1>
+        <ol>
+          <li><strong>Формы</strong>
+            <ul>
+              <li>Основные теги: <code>&lt;form></code>, <code>&lt;input></code>, <code>&lt;label>,</code> <code>&lt;textarea></code>, <code>&lt;button></code>.</li>
+              <li>Поля ввода: текстовые поля, пароли, чекбоксы, радиокнопки, селекторы.</li>
+              <li>Атрибуты: <code>name</code>, <code>action</code>, <code>method</code>, <code>placeholder</code>, <code>required</code>.</li>
+              <li>Практика: создание форм для сбора данных пользователей.</li>
+            </ul>
+          </li>
+          <li><strong>Отправка данных</strong>
+            <ul>
+              <li>Понимание GET и POST методов.</li>
+              <li>Обработка отправки форм на сервер.</li>
+            </ul>
+          </li>
+        </ol>
+
+        <h1>Этап 6: Мультимедиа и другие теги</h1>
+        <ol>
+          <li><strong>Аудио и видео</strong>
+            <ul>
+              <li>Теги <code>&lt;audio></code>, <code>&lt;video></code>, атрибуты <code>controls</code>, <code>autoplay</code>, <code>loop</code>.</li>
+              <li>Практика: вставка мультимедиа на веб-страницу.</li>
+            </ul>
+          </li>
+          <li><strong>Интерактивные элементы</strong>
+            <ul>
+              <li>Теги <code>&lt;details></code>, <code>&lt;summary></code>, <code>&lt;dialog></code>, <code>&lt;progress></code>, <code>&lt;meter></code>.</li>
+              <li>Практика: работа с интерактивными элементами на странице.</li>
+            </ul>
+          </li>
+        </ol>
+
+        <h1>Этап 7: Продвинутые темы</h1>
+        <ol>
+          <li><strong>Метаданные</strong>
+            <ul>
+              <li>Тег <code>&lt;meta></code>, атрибуты <code>charset</code>, <code>name</code>, <code>content</code>, настройка заголовков и описаний для SEO.</li>
+              <li>Практика: настройка метаданных для веб-страницы.</li>
+            </ul>
+          </li>
+          <li><strong>Комментарии</strong>
+            <ul>
+              <li>Тег комментария <code>&lt;!-- комментарий --></code>.</li>
+              <li>Использование комментариев для пояснений в коде.</li>
+              <li></li>
+            </ul>
+          </li>
+          <li><strong>Ссылки на внешние ресурсы</strong>
+            <ul>
+              <li>Подключение CSS и JavaScript: теги <code>&lt;link></code> и <code>&lt;script></code>.</li>
+              <li>Практика: подключение внешних файлов.</li>
+              <li></li>
+            </ul>
+          </li>
+        </ol>
+
+        <h1>Этап 8: Углубление и практика</h1>
+        <ol>
+          <li><strong>Валидация HTML</strong>
+            <ul>
+              <li>Как проверять HTML-код на ошибки с помощью валидаторов.</li>
+              <li>Практика: исправление ошибок и улучшение качества кода.</li>
+            </ul>
+          </li>
+          <li><strong>Создание многостраничного сайта</strong>
+            <ul>
+              <li>Практика: создание нескольких связанных страниц с использованием ссылок.</li>
+            </ul>
+          </li>
+          <li><strong>Адаптивная верстка</strong>
+            <ul>
+              <li>Основы адаптивности: использование семантических тегов и медиа-запросов.</li>
+            </ul>
+          </li>
+        </ol>
+
+        <h1>Этап 9: Оптимизация и продвинутые техники</h1>
+        <ol>
+          <li><strong>SEO основы</strong>
+            <ul>
+              <li>Работа с тегами для SEO оптимизации.</li>
+              <li>Практика: улучшение SEO параметров существующего сайта.</li>
+            </ul>
+          </li>
+          <li><strong>Доступность (Accessibility)</strong>
+            <ul>
+              <li>Создание доступного интерфейса: <code>aria-labels</code>, alt-описания, семантические теги.</li>
+              <li>Практика: улучшение доступности страницы.</li>
+            </ul>
+          </li>
+        </ol>
+
+        <h1>Этап 10: Проектная работа</h1>
+        <ol>
+          <li><strong>Создание полного проекта</strong>
+            <ul>
+              <li>Реализация многостраничного сайта с использованием всех изученных технологий.</li>
+              <li>Практика: создание и размещение проекта на хостинге.</li>
+            </ul>
+          </li>
+        </ol>
+
+        <h3>Статьи HTML</h3>
 
         <p>
           <ul>
