--- a/pages/html.html
+++ b/pages/html.html
@@ -37,7 +37,7 @@
         <ol>
           <li><strong>Что такое HTML и как он работает?</strong>
             <ul>
-              <li>Основные концепции веб-страниц: структура, браузеры и HTML.</li>
+              <li><a href="../pages/html/ch1-1-1.html">Основные концепции веб-страниц: структура, браузеры и HTML.</a></li>
               <li>Роль HTML в связке с CSS и JavaScript.</li>
             </ul>
           </li>
