--- a/pages/html.html
+++ b/pages/html.html
@@ -38,7 +38,7 @@
           <li><strong>Что такое HTML и как он работает?</strong>
             <ul>
               <li><a href="../pages/html/ch1-1-1.html">Основные концепции веб-страниц: структура, браузеры и HTML.</a></li>
-              <li>Роль HTML в связке с CSS и JavaScript.</li>
+              <li><a href="../pages/html/ch1-1-2.html">Роль HTML в связке с CSS и JavaScript.</a></li>
             </ul>
           </li>
           <li><strong>Первая HTML-страница</strong>
