--- a/pages/html.html
+++ b/pages/html.html
@@ -43,7 +43,7 @@
           </li>
           <li><strong>Первая HTML-страница</strong>
             <ul>
-              <li>Теги <code>&lt;html></code>, <code>&lt;head></code>, <code>&lt;body></code>, структура HTML-документа.</li>
+              <li><a href="../pages/html/ch1-2-1.html">Теги <code>&lt;html></code>, <code>&lt;head></code>, <code>&lt;body></code>, структура HTML-документа.</a></li>
               <li>Тег <code>&lt;title></code>, заголовки <code>&lt;h1> – &lt;h6></code>.</li>
               <li>Практика: создание первой страницы с заголовком и текстом.</li>
             </ul>
